contact info and add supporters section

--- a/_config.yml
+++ b/_config.yml
@@ -35,17 +35,17 @@ theme_settings:
   keybase:
   linkedin:  # Full URL
   pinterest:
-  patreon: 
+  patreon: illusion0001
   paypal: 
-  reddit:
+  reddit: illusion0001
   soundcloud:
   stack_exchange:  # Full URL
   steam: 
   tumblr:
-  twitter: 
+  twitter: illusion0002
   vimeo:
   wordpress:
-  youtube: 
+  youtube: illusion0001
 
   # Sharing options
   share_buttons:
