Remove assets from origin
these just take up repo space, no use for them

--- a/_config.yml
+++ b/_config.yml
@@ -97,11 +97,11 @@ theme_settings:
   codemasters_icon: "<i class='fas icomoon icon-codemasters'></i>"
 
   # Flags
-  pl_flag: "<img style='height:1em;padding: 0 0.5em' src='/assets/img/flags/pl.svg' alt='PL'>"
-  gb_flag: "<img style='height:1em;padding: 0 0.5em' src='/assets/img/flags/gb.svg' alt='GB'>"
-  eu_flag: "<img style='height:1em;padding: 0 0.5em' src='/assets/img/flags/eu.svg' alt='EU'>"
-  us_flag: "<img style='height:1em;padding: 0 0.5em' src='/assets/img/flags/us.svg' alt='US'>"
-  jp_flag: "<img style='height:1em;padding: 0 0.5em' src='/assets/img/flags/jp.svg' alt='JP'>"
+  pl_flag: "<img style='height:1em;padding: 0 0.5em' src='/assets/images/svg/flags/pl.svg' alt='PL'>"
+  gb_flag: "<img style='height:1em;padding: 0 0.5em' src='/assets/images/svg/flags/gb.svg' alt='GB'>"
+  eu_flag: "<img style='height:1em;padding: 0 0.5em' src='/assets/images/svg/flags/eu.svg' alt='EU'>"
+  us_flag: "<img style='height:1em;padding: 0 0.5em' src='/assets/images/svg/flags/us.svg' alt='US'>"
+  jp_flag: "<img style='height:1em;padding: 0 0.5em' src='/assets/images/svg/flags/jp.svg' alt='JP'>"
 
   # Colours, typography and padding
   # Open the "_sass > base" folder, and open "_variables.scss"
