--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ theme_settings:
   behance:
   bitbucket:
   dribbble:
-  discord:
+  discord: 192940192133414912
   facebook:
   flickr:
   gitlab:
@@ -76,7 +76,7 @@ theme_settings:
   # Localization strings
   str_follow_on: "Follow on"
   str_rss_follow: "Follow RSS feed"
-  str_discord: "Join RockstarVision Discord, the fastest way to contact me"
+  str_discord: "Add me on Discord"
   str_support_via: "Support via"
   str_share_on: "Share on"
   str_add_to: "Add to"
