--- a/_config.yml
+++ b/_config.yml
@@ -138,7 +138,7 @@ defaults:
   - scope:
       path: ""
     values:
-      image: assets/icons/favicon.png
+      # image: assets/icons/favicon.png
       date-format: "%B %-d, %Y"
   - scope:
       path: ""
