--- a/_patch0/GTA5-Orbis.yml
+++ b/_patch0/GTA5-Orbis.yml
@@ -1,4 +1,15 @@
 - game: "Grand Theft Auto V"
+  app_ver: "01.00"
+  patch_ver: "1.0"
+  name: "60 FPS Unlock"
+  author: "illusion"
+  note: "CPU Limited. For use with 9th generation of game consoles."
+  arch: orbis
+  enabled: False # Todo: move this to a separate file
+  patch_list:
+        - [ bytes, 0x00e6bf3d, "bf01000000" ]
+
+- game: "Grand Theft Auto V"
   app_ver: "01.38"
   patch_ver: "1.0"
   name: "60 FPS Unlock"
@@ -7,7 +18,8 @@
   arch: generic_orbis
   enabled: False # Todo: move this to a separate file
   patch_list:
-        - [ bytes, 0xD3BB5E, "01 00 00 00" ]
+        - [ bytes, 0xD3BB5E, "01" ]
+
 - game: "Grand Theft Auto V"
   app_ver: "01.38"
   patch_ver: "1.0"
