--- a/_patch0/orbis/FD4_FDNT-Orbis.yml
+++ b/_patch0/orbis/FD4_FDNT-Orbis.yml
@@ -4,11 +4,25 @@
   name: "60 FPS Unlock (With Delta Time)"
   author: "illusion"
   note:
-  arch: generic_orbis
+  arch: orbis
   enabled: False # Todo: move this to a separate file
   patch_list:
-        - [ bytes, 0x2390407, "C7 43 08 05 00 00 00 EB 07" ]
-        - [ bytes, 0x239050C, "41 B6 01" ]
+        - [ bytes, 0x0278c407, "c7430805000000eb07" ] # flipmode
+        - [ bytes, 0x0278c50c, "41b601" ]             # delta time
+
+- game: "Dark Souls III: Network Stress Test"
+  app_ver: "01.00"
+  patch_ver: "1.0"
+  name: "30 FPS Fix (Proper Frame Pacing)"
+  author: "illusion"
+  note: "Caps framerate to 30 with proper frame pacing."
+  arch: orbis
+  enabled: False # Todo: move this to a separate file
+  patch_list:
+        - [ bytes, 0x0278c407, "c7430805000000eb07" ]           # flipmode
+        # SceVideoOutFliprate(handle, 1);
+        # return;
+        - [ bytes, 0x02dbdb44, "488b1ded10f102be01000000eb03" ] # fliprate
 
 - game: "Dark Souls III: Network Stress Test"
   app_ver: "01.00"
@@ -16,7 +30,8 @@
   name: "720p Resolution"
   author: "illusion"
   note:
-  arch: generic_orbis
+  arch: orbis
   enabled: False # Todo: move this to a separate file
   patch_list:
-        - [ bytes, 0x5926D84, "00 05 00 00 D0 02 00 00" ]
+        # todo: convert these to int patches
+        - [ bytes, 0x05d22d84, "00050000d0020000" ]
