--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,9 +1,6 @@
 name: Deploy to GitHub Pages
 
-on:
-  push:
-    branches:    
-      - 'main'
+on: push
 
 jobs:
   jekyll_build:
@@ -18,18 +15,21 @@ jobs:
       with:
         path: vendor/bundle
         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
-        restore-keys: |
-          ${{ runner.os }}-gems-
+        restore-keys: ${{ runner.os }}-gems-
 
     - name: Pack patch files into zip
       run: |
-        cp  -r "_patch0" "patch0"
+        current=`date '+%Y-%m-%d %H:%M:%S %A'`
+        cp -r "_patch0" "patch0"
         ls -R _patch0 > manifest_patch0.txt
         find _patch0 -print > manifest_patch1.txt
+        echo "Built on: $current" >> patch0/patch_build.txt
+        cat patch0/patch_build.txt
         zip -r _patch/patch.zip patch0
         rm  -r "patch0"
 
     - name: Deploy
+      if: github.repository == 'illusion0001/illusion0001.github.io'
       uses: helaili/jekyll-action@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
