--- a/_patch0/orbis/BmGame4Orbis.yml
+++ b/_patch0/orbis/BmGame4Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note: "CPU Limited. For use with 9th generation of game consoles."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         # 60fps
         - [ bytes, 0x616ABF, "00" ]
@@ -26,6 +26,6 @@
   author: "illusion"
   note: 
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x276C034, "00 05 00 00 D0 02 00 00 00" ]
