--- a/_patch0/orbis/ConcreteGenie-Orbis.yml
+++ b/_patch0/orbis/ConcreteGenie-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note: 
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x2F98C96, "74 69" ]
 
@@ -16,7 +16,7 @@
   author: "illusion"
   note: 
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x2D41546, "c7 40 00 0a 57 85 42" ]
         # 0a 57 85 42 = 66.67f
@@ -28,6 +28,6 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x1BB4219, "EB 58" ]
