--- a/_patch0/orbis/F4-Orbis.yml
+++ b/_patch0/orbis/F4-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x10B8FB7, "00 00 00 00" ]
 
@@ -16,7 +16,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         # Base
         # 1920x1080 -> 1280x720
