--- a/_patch0/orbis/GTA5-Orbis.yml
+++ b/_patch0/orbis/GTA5-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note: "CPU Limited. For use with 9th generation of game consoles."
   arch: orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x00e6bf3d, "bf01000000" ]
 
@@ -16,7 +16,7 @@
   author: "illusion, GraFfiX_221211"
   note: "CPU Limited. For use with 9th generation of game consoles."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0xD3BB5E, "01" ]
 
@@ -27,7 +27,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x2F3E794, "00" ]
         - [ bytes, 0x286EFB8, "00" ]
