--- a/_patch0/orbis/GhostOfTsushimaDC-Orbis.yml
+++ b/_patch0/orbis/GhostOfTsushimaDC-Orbis.yml
@@ -6,7 +6,7 @@
   note: "Enable "Better Framerate Mode" in the game options menu on Neo. Not very useful for Base Console due to hardware limits."
   # Dev Notes: "60 FPS mode everywhere, yes even in IGCs (in game cinematics). which is an upgrade over Prospero ver."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x707B1A, "EB 12" ]
 
@@ -17,7 +17,7 @@
   author: "illusion"
   note: "Enable "Better Framerate Mode" in the game options menu on Neo."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x706BD1, "40 06 00 00" ]
         - [ bytes, 0x706BD5, "84 03 00 00" ]
@@ -29,6 +29,6 @@
   author: "illusion"
   note: "Enable "Better Framerate Mode" in the game options menu on Neo."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x706BEA, "00" ]
