--- a/_patch0/orbis/HellbladeGame-Orbis.yml
+++ b/_patch0/orbis/HellbladeGame-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note: "\nThis game already runs with uncapped framerate.\nOnly useful for Base Console."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         # allow screenpercentage to be used
         - [ bytes, 0x252C934, "74 0D" ]
@@ -30,7 +30,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x1E5C0C2, "48 E9 87 06 00 00" ]
 
@@ -41,7 +41,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x178EE71, "EB 40" ] 
 - game: "Hellblade: Senua's Sacrifice"
@@ -51,7 +51,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x156032F, "EB" ]
 
@@ -62,6 +62,6 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x15602B5, "48 E9" ]
