--- a/_patch0/orbis/TekkenGame-Orbis.yml
+++ b/_patch0/orbis/TekkenGame-Orbis.yml
@@ -5,6 +5,6 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x1B01EDC, "48 E9" ]
