--- a/_patch0/orbis/uncharted-collection.yml
+++ b/_patch0/orbis/uncharted-collection.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x960A17, "01" ]
 
@@ -16,7 +16,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x1061E94, "01" ]
 
@@ -27,6 +27,6 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x5691D6, "00" ]
