--- a/_patch0/orbis/Bhd0-orbis.yml
+++ b/_patch0/orbis/Bhd0-orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note: "As part of Resident Evil Origins Collection."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x329AED, "00 00 70 42" ]
 # this is a note for other patch devs
