--- a/_patch0/orbis/Biohazard3Remake-Orbis.yml
+++ b/_patch0/orbis/Biohazard3Remake-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note: "720p for Base, 1080p for Pro."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x30A09FC, "1F 85 2B 3F" ]
 # 67% of 1920x1080 or 2880x1620
