--- a/_patch0/orbis/Daymare_MASTER-Orbis.yml
+++ b/_patch0/orbis/Daymare_MASTER-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x258C177, "75" ]
         # Skips: bSmoothFrameRate
@@ -17,7 +17,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
 0x258C177 75
 0xE85D82 67 E8 0F FB 6E 01 90 90
@@ -29,7 +29,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x1E95945, "E8 30 FF 6D 00" ]
         - [ bytes, 0x1E9607A, "48 E8 08 F8 6D 00" ]
