--- a/_patch0/orbis/FD4-NT-Orbis.yml
+++ b/_patch0/orbis/FD4-NT-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion, manfightdragon"
   note: "Caps framerate to 30 with proper frame pacing."
   arch: orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ float32, 0x00c34917, 0.016666667 ]
         # SceVideoOutFliprate(handle, 1);
