--- a/_patch0/orbis/FD4-NTS-Orbis.yml
+++ b/_patch0/orbis/FD4-NTS-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         # Flipmode
         - [ bytes, 0x1BF6627, "95" ]
@@ -19,7 +19,7 @@
   author: "illusion"
   note: "Caps framerate to 30 with proper frame pacing."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         # Flipmode (Base Only)
         - [ bytes, 0x1BF6627, "95" ]
@@ -35,7 +35,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         # Base
         - [ bytes, 0x3C68B8C, "00 05 00 00 D0 02 00 00" ]
@@ -50,7 +50,7 @@
   author: "Whitehawkx"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x015724A0, "E9 00 01" ]
 
@@ -61,7 +61,7 @@
   author: "Pav"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x013BBC33, "90 90 90 90 90" ]
 
@@ -72,6 +72,6 @@
   author: "Whitehawkx"
   note: "Re-enables built-in video recording and screenshots (Share button)"
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x01BFF799, "00" ]
