--- a/_patch0/orbis/FD4_FDP-Orbis.yml
+++ b/_patch0/orbis/FD4_FDP-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note: "\nOnly useful for base console.\nYou must apply FPS Unlock patch to take effect on Base Console.\nPro owners do not need this patch."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         # VFR
         - [ bytes, 0x180805D, "EB 0E" ]
@@ -19,7 +19,7 @@
   author: "illusion"
   note: "Caps framerate to 30 with proper frame pacing."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         # Fliprate
         - [ bytes, 0x18081D6, "EB 0E" ]
