--- a/_patch0/orbis/MadMax-Orbis.yml
+++ b/_patch0/orbis/MadMax-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0xF2F900, "BE 00 00 00 00 90 90 90" ]
 
@@ -16,7 +16,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         # 1920x1080 -> 1280x720
         - [ bytes, 0xA92F48, "00 05 00 00 D0 02 00 00" ]
@@ -28,6 +28,6 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0xAA7F5A, "00" ]
