--- a/_patch0/orbis/SdHD-Orbis.yml
+++ b/_patch0/orbis/SdHD-Orbis.yml
@@ -5,6 +5,6 @@
   author: "illusion"
   note: "CPU/GPU Limited. For use with 9th generation of game consoles."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x70B88B, "00 00 00 00" ]
