--- a/_patch0/orbis/Siren-LifeisStrange3-Orbis.yml
+++ b/_patch0/orbis/Siren-LifeisStrange3-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x414B742, "EB 07" ]
 
@@ -16,7 +16,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x3A0540C, "48 E8 C1 84 5D 02" ]
         - [ bytes, 0x5FDD8D2, "00 41 C7 04 8E 00 00 86 42 C4 C1 7A 10 04 8E C3" ]
