--- a/_patch0/orbis/TO1886-Orbis.yml
+++ b/_patch0/orbis/TO1886-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x4547C4, "01" ]
         # screen flip mode
@@ -27,7 +27,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x450EF5, "75" ]
         - [ bytes, 0x450EFD, "40 06 00 00" ]
@@ -40,6 +40,6 @@
   author: "illusion"
   note: "\nNative 1080p will cause visual issues, 900p or below must be used.\n720p doesn't need additional changes."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x450E8C, "39 8E E3 3F" ]
