--- a/_patch0/orbis/TR2-Orbis.yml
+++ b/_patch0/orbis/TR2-Orbis.yml
@@ -5,7 +5,7 @@
   author: "illusion"
   note: "CPU Limited in some areas."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x49226C, "31 F6" ]
 
@@ -16,7 +16,7 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         # Base
         # This game creates a separate container for resolution
