--- a/_patch0/orbis/ncg-orbis.yml
+++ b/_patch0/orbis/ncg-orbis.yml
@@ -5,6 +5,6 @@
   author: "illusion"
   note: "\n60FPS 99% of the time. No need for resolution patch.\nUses adapative sync."
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x14460B, "95" ]
