--- a/_patch0/orbis/trico-orbis.yml
+++ b/_patch0/orbis/trico-orbis.yml
@@ -5,6 +5,6 @@
   author: "illusion"
   note: "CPU Limited, for use with 9th generation of consoles."
   arch: orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
        - [ bytes, 0x01051467, "e9b3000000" ]
