--- a/_patch0/orbis/uncharted-tll.yml
+++ b/_patch0/orbis/uncharted-tll.yml
@@ -5,6 +5,6 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x13278B7, "EB 4C" ]
