--- a/_patch0/orbis/uncharted4.yml
+++ b/_patch0/orbis/uncharted4.yml
@@ -5,6 +5,6 @@
   author: "illusion"
   note:
   arch: generic_orbis
-  enabled: False # Todo: move this to a separate file
+  enabled: False
   patch_list:
         - [ bytes, 0x127BEC7, "EB 2C" ]
