Remove empty note entries

--- a/_patch0/orbis/Gravity_Daze_2_Orbis.yml
+++ b/_patch0/orbis/Gravity_Daze_2_Orbis.yml
@@ -254,8 +254,7 @@
 #   patch_ver: "1.0"
 #   name: "Semi-functional video stutter fix (FOR PATCH DEVELEOPERS ONLY)"
 #   author: "illusion"
-#   note:
-#   arch: generic_orbis
+# #   arch: generic_orbis
 #   enabled: False
 #   patch_list:
 #         # Semi-functional video stutter fix
