--- a/_patch0/orbis/Daymare_MASTER-Orbis.yml
+++ b/_patch0/orbis/Daymare_MASTER-Orbis.yml
@@ -9,17 +9,19 @@
         - [ bytes, 0x258C177, "75" ]
         # Skips: bSmoothFrameRate
         # This patch disables all of it, see preview image for significant improvemnt.
+
 - game: "Daymare 1998"
   app_ver: "01.00"
   patch_ver: "1.0"
-  name: "60 FPS Unlock"
+  name: "30 FPS Fix"
   author: "illusion"
   arch: generic_orbis
   enabled: False
   patch_list:
-0x258C177 75
-0xE85D82 67 E8 0F FB 6E 01 90 90
-0x2575897 41 C7 04 8E 02 00 00 00 41 8B 1C 8E C5 EB 2A C3 C3
+        - [ bytes, 0x258C177, "75" ]
+        - [ bytes, 0xE85D82, "67 E8 0F FB 6E 01 90 90" ] 
+        - [ bytes, 0x2575897, "41 C7 04 8E 02 00 00 00 41 8B 1C 8E C5 EB 2A C3 C3" ]
+
 - game: "Daymare 1998"
   app_ver: "01.00"
   patch_ver: "1.0"
