--- a/_patch0/orbis/TheEvilWithin-Orbis.yml
+++ b/_patch0/orbis/TheEvilWithin-Orbis.yml
@@ -3,7 +3,7 @@
   patch_ver: "1.0"
   name: "60 FPS Unlock"
   author: "illusion"
-  note: "\nGPU Limited. For use with 9th generation of game consoles.\nUses Triple buffering."
+  note: "GPU Limited. For use with 9th generation of game consoles.\nUses Triple buffering."
   arch: generic_orbis
   enabled: False
   patch_list:
