--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -19,6 +19,10 @@ jobs:
 
     - name: Pack patch files into zip
       run: |
+        # temp to keep page working for draft
+        cd _posts
+        cp 2022-04-18-Fromsoftware-Framepacing.md 1971-01-01-Fromsoftware-Framepacing.md
+        cd ..
         # very very ugly workaround
         # find out why it doesnt work without copy
         cp -r _patch __patch
