--- a/_patch0/orbis/Driveclub-Orbis.yml
+++ b/_patch0/orbis/Driveclub-Orbis.yml
@@ -7,4 +7,4 @@
   arch: orbis
   patch_list:
         - [ bytes, 0x01184800, "b801000000" ] # MOV EAX,0x1 // fps
-        - [ bytes, 0x01184725, "48b001" ]     # MOV AL,0x1  // gamespeed 60.0f
+        - [ bytes, 0x01184725, "48b001" ]     # MOV AL,0x1  // use default of fixedFramesPerSecond = 60.0f
