--- a/_patch0/orbis/AssassinsCreedUnity-Orbis.yml
+++ b/_patch0/orbis/AssassinsCreedUnity-Orbis.yml
@@ -25,3 +25,23 @@
   patch_list:
         - [ bytes32, 0x042f3a19, 1920 ]
         - [ bytes32, 0x042f3a0b, 1080 ]
+
+- game: "Assassin's Creed: Unity"
+  app_ver: "01.05"
+  patch_ver: "1.0"
+  name: "Resolution Patch (900p)"
+  author: "illusion"
+  arch: orbis
+  patch_list:
+        - [ bytes32, 0x042f3a19, 1600 ]
+        - [ bytes32, 0x042f3a0b, 900  ]
+
+- game: "Assassin's Creed: Unity"
+  app_ver: "01.05"
+  patch_ver: "1.0"
+  name: "Resolution Patch (720p)"
+  author: "illusion"
+  arch: orbis
+  patch_list:
+        - [ bytes32, 0x042f3a19, 1280 ]
+        - [ bytes32, 0x042f3a0b, 720  ]
